--- a/.env.example
+++ b/.env.example
@@ -48,4 +48,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+PIXBAY_DOMAIN=https://pixabay.com/
 PIXBAY_API_KEY=
