--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.21.2",
         "vue": "^2.6.12",
+        "vue-cookies": "^1.7.4",
         "vue-router": "^3.5.1"
     }
 }
