--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
