feats: updates .env.example to use redis for cache, session, queue

--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,9 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
+SESSION_LIFETIME=redis
 
 MEMCACHED_HOST=127.0.0.1
 
