feats: adds new StorePhotoJob

--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,12 @@ SESSION_LIFETIME=redis
 
 MEMCACHED_HOST=127.0.0.1
 
+# tested with redislabs cloud....
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=0
+REDIS_CACHE_DB=0
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
