--- a/.env.example
+++ b/.env.example
@@ -2,32 +2,31 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=vue_router
-DB_USERNAME=root
+DB_CONNECTION=pgsql
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
-SESSION_LIFETIME=redis
+SESSION_LIFETIME=120
+
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_PORT=
+REDIS_DB=
+REDIS_CACHE_DB=
 
 MEMCACHED_HOST=127.0.0.1
-
-# tested with redislabs cloud....
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_CACHE_DB=0
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
